--- a/online-portfolio/MAIN PROJECT/about.html
+++ b/online-portfolio/MAIN PROJECT/about.html
@@ -3,39 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>About Me - My Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header>
     <nav class="navbar">
-    <ul class="nav-menu">
-    <li><a href="home.html" class="nav-link home-link">Home</a></li>
-    <li><a href="about.html" class="nav-link about-link">About</a></li>
-    <li><a href="project.html" class="nav-link project-link">Projects</a></li>
-    <li><a href="contact.html" class="nav-link contact-link">Contact</a></li>
-
-  </ul>
-  <button id="darkModeToggle">🌙</button>
-</nav>
+      <div class="logo">About Me</div>
+      <ul class="nav-menu">
+        <li><a href="home.html" class="nav-link home-link">Home</a></li>
+        <li><a href="about.html" class="nav-link about-link">About</a></li>
+        <li><a href="project.html" class="nav-link project-link">Projects</a></li>
+        <li><a href="contact.html" class="nav-link contact-link">Contact</a></li>
+      </ul>
+      <button id="darkModeToggle">🌙</button>
+    </nav>
   </header>
 
   <main>
-    <section class="intro">
-  <div class="profile-box">
-    <img src="profile.jpg" alt="Profile Picture" class="profile-img" />
-  </div>
-  <div class="details">
-  <h1 id="typewriter">Hi, I'm Reddi Varun</h1>
-  <p>Java Developer (Fresher) | JSP | MySQL | HTML | CSS | JavaScript</p>
-</div>
-</section>
-  </main>
-<footer>
-    <p>
-        &copy; 2025 Reddi Varun
+    <section class="about-section" style="padding: 2rem;">
+      <h1>About Me</h1>
+       <p>
+      Hello! I m <strong>Reddi Varun</strong>, a passionate Java developer with a strong foundation in JSP, Servlets, JDBC, and MySQL. I enjoy building scalable and efficient web applications, and I m always eager to learn and explore new technologies.
     </p>
-</footer>
+    <p>
+      In addition to backend development, I also have hands-on experience with front-end technologies like HTML, CSS, and JavaScript. I take pride in creating clean, user-friendly interfaces that provide a seamless user experience.
+    </p>
+    <p>
+      I m excited to contribute to innovative projects and collaborate with dynamic teams where I can grow and make a meaningful impact.
+    </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Reddi Varun</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
