--- a/online-portfolio/MAIN PROJECT/project.html
+++ b/online-portfolio/MAIN PROJECT/project.html
@@ -27,20 +27,20 @@
         <li>
           <strong>Online Registration Form (Java, JSP, MySQL) :-</strong><br />
          This is a web-based user registration system developed using JSP (Java Server Pages), which allows users to submit their personal details through a form. Instead of storing data in a database, the system writes user records to a local file named registrations.txt.<br />
-          <a href="online registration form" target="_blank">
+           <a href="/projects/online registration form/register.jsp", target="_blank">
           View Code>
-          </a>
+            </a>
         <li>
             <strong>Netflix To-Do List (HTML, CSS, JavaScript) :-</strong><br />
             A task management app styled like Netflix, allowing users to add and remove items dynamically.<br />
-            <a href="todolist\todo\todo.html" target="_blank">
+            <a href="/projects/todolist/todo/todo.html" target="_blank">
             Show Project>
             </a>
         </li>
         <li>
             <strong>Profile Card (HTML, CSS, JavaScript) :-</strong><br />
             A profile card showcasing follow and message buttons.<br />
-            <a href="profile card\profilecard\pc.html" target="_blank">
+            <a href="/projects/profile card/profilecard/pc.html" target="_blank">
             Show Project>
         </a>
         </li>
